# reach-rs

./: .gitignore  GEMINI.md  README.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  matrix.rs
ui/: PLANNED_FEATURES.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
ui/src/: App.tsx  index.css  main.tsx
ui/src/components/auth/: Login.tsx  SecurityRecovery.tsx
ui/src/components/calls/: ActiveCall.tsx  ParticipantTile.tsx
ui/src/components/chat/: ChannelDetails.tsx  ChatArea.tsx  ChatInput.tsx  DecryptedMedia.tsx  MessageItem.tsx  MessageList.tsx  StickerPicker.tsx  ThreadView.tsx  UrlPreview.tsx
ui/src/components/layout/: ChannelList.tsx  RoomItem.tsx  Sidebar.tsx  Titlebar.tsx
ui/src/components/ui/: ChannelExplorer.tsx  CreateModal.tsx  ExploreModal.tsx  MediaLightbox.tsx  SettingsModal.tsx  ThemeManager.tsx  UserContextMenu.tsx  UserProfileModal.tsx
ui/src/core/: callManager.ts  matrix.ts  notifications.ts  timelineManager.ts
ui/src/hooks/: useDirectMessages.ts  useFileUpload.ts  useGamePresence.ts  useGroupCall.ts  useMatrixClient.ts  useMatrixSync.ts  usePinnedEvents.ts  useRoomMembers.ts  useRoomMessages.ts  useRoomTyping.ts  useSearch.ts  useSpaceHierarchy.ts  useSpaceRooms.ts  useSpaces.ts  useStickerPacks.ts  useUserPresence.ts
ui/src/store/: useAppStore.ts
ui/src/utils/: cssSanitizer.ts  emojis.ts  logger.ts  markdown.ts  media.ts  roleColors.ts
